# Kys_promise_cpp

./: .gitignore  analyze_events.py  analyze_events_v2.py  develop_document.md  file_masker.py  initialize_prmpt.txt  next_prmpt.txt  readme.md  run_masker.bat  stderr.txt  stdout.txt
.trae/rules/: check.md
UPedit/: SAVERR_ANALYSIS.md  UPedit.ini  d1.grp  decrypt_saverr.py  fix_saverr.py  分析报告.md
UPedit/save/: D4.grp  D6.grp  R2.grp  R3.grp  R3.grp.bak  Ranger.grp  Ranger.idx.bak  d2.grp  d3.grp  r1.grp
UPedit/savecorr/: d1.grp
UPedit/saverr/: R1.grp  Ranger.grp
UPedit/saverr_decrypted/: Ranger.grp  alldef.grp  r1.grp
cpp_reborn/: CMakeLists.txt  PROJECT_STATUS.md  TODO_LIST.md
cpp_reborn/doc/: AI_TASK_PROMPTS.md  PASCAL_MAPPING.md  REFACTOR_GUIDE.md  REFACTOR_PROMPTS.md  REF_DEV_DOC.md  TASK_LIST_ZH.md
cpp_reborn/include/: BattleManager.h  BattleRole.h  EventManager.h  FileLoader.h  GameManager.h  GameObject.h  GameTypes.h  GraphicsUtils.h  Item.h  Magic.h  PicLoader.h  Role.h  Scene.h  SceneManager.h  SoundManager.h  TextManager.h  UIManager.h  WarData.h
cpp_reborn/src/: BattleManager.cpp  BattleRole.cpp  EventManager.cpp  FileLoader.cpp  GameManager.cpp  GraphicsUtils.cpp  PicLoader.cpp  SceneManager.cpp  SoundManager.cpp  TextManager.cpp  UIManager.cpp  WarData.cpp  analyze_data.cpp  dump_header.cpp  inspect_pic_header.cpp  main.cpp  save_inspector.cpp
cpp_reborn/tests/: CMakeLists.txt  dump_ddata.cpp  dump_events.cpp  talk.idx  test_battle.cpp  test_event.cpp  test_loading.cpp  test_menu.cpp  test_placeholder.cpp  test_save_load.cpp  test_scene_trigger.cpp
cpp_reborn/tests/build_test/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  check_talk.sln  check_talk.vcxproj  check_talk.vcxproj.filters  cmake_install.cmake
cpp_reborn/tests/resource/: talk.grp
